log/build_2020-08-08_22-36-17/main/stdout_stderr 2.log
Scanning dependencies of target main
[ 16%] Building CXX object CMakeFiles/main.dir/src/game.cpp.o
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:17:82: error: no member named 'size' in 'message_info::msg::DetectionFrame_<std::__1::allocator<void> >'
          if(vision_message->frames[i].balls.size() && vision_message->frames[i].size())
                                                       ~~~~~~~~~~~~~~~~~~~~~~~~~ ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:31:16: warning: unused variable 'field_width' [-Wunused-variable]
         float field_width = geometry_message->field_width;
               ^
1 warning and 1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/game.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
